# KonomiTV

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  License.txt  Readme.md  compose.dev.yaml  compose.yaml  config.example.yaml  docker-compose.example.yaml  docker-compose.override.example.yaml  docker-compose.sample.yaml  docker-compose.yaml  flake.nix  package.json  vetur.config.js
.claude/: .gitignore
.claude/plans/: timetable.md
.claude/skills/add-new-setting-field/: SKILL.md
.claude/skills/generate-release-notes/: SKILL.md  past-intro-examples.md  past-release-notes-examples.md
.claude/skills/release-checklist/: SKILL.md
.cursor/rules/: add-new-setting-field.mdc  global.mdc
.github/: copilot-instructions.md  funding.yaml  pull_request_template.md
.github/instructions/: commitMessageRule.md
.github/workflows/: build_installer.yaml  build_thirdparty.yaml  create_release_commit.yaml  docker.yaml  docker.yml  publish_docker_image.yaml  publish_release.yaml
.github/workflows/patches/: intel-libva-standalone.patch  intel-media-driver-pr1988.patch  intel-media-driver-vpp-deinterlace-crash-fix.patch  intel-onevpl-gpu-rt-adaptive-b-gop-margin.patch  intel-onevpl-gpu-rt-vpp-deinterlace-hang-fix.patch
.github/workflows/scripts/: build_intel_media_stack_standalone.sh
client/: .eslintrc.json  .gitignore  README.md  Readme.md  Vue.config.js  babel.config.js  capacitor.config.ts  index.html  logoGenerator.js  package-lock.json  package.json  package.nix  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts  vue.config.js
client/public/: index.html  manifest.json  solver.html
client/scripts/: inject-sw-cache-handler.js  sw-cache-handler.js
client/src/: App.vue  extends.d.ts  interface.ts  main.ts  message.ts  mixins.ts  registerServiceWorker.ts  service-worker.ts  shims-tsx.d.ts  shims-vue.d.ts  shims-vuetify.d.ts  types.d.ts  utility.ts  vite-env.d.ts
client/src/components/: BottomNavigation.vue  Breadcrumbs.vue  DownloadProgressFAB.vue  Header.vue  HeaderBar.vue  HelloWorld.vue  Navigation.vue  SPHeaderBar.vue  Snackbars.vue  VTabItem.ts  VTabs.ts  VTabs.vue  VTabsBar.ts  VTabsBar.vue  VTabsItems.ts  VTabsItems.vue
client/src/plugins/: axios.ts  floating-vue.ts  vuetify.ts
client/src/router/: index.ts
client/src/scss/: variables.scss
client/src/services/: Series.ts  (+20 more)
installer/: .gitignore  Install.py  Installer.py  KonomiTV-Installer.py  KonomiTV-Installer.spec  Pipfile  Uninstall.py  Uninstaller.py  Update.py  Updater.py  Utils.py  pyproject.toml
server/: KonomiTV-Service.py  KonomiTV.py  Pipfile  TSInfoExtractor.py  aerich.ini  discord_main.py  manage.py  poetry.toml  pyproject.toml  test.py
server/app/: admin.py  app.py  apps.py  config.py  constants.py  logging.py  models.py  schemas.py  serializers.py  urls.py  utils.py  views.py
server/app/metadata/: CMSectionsDetector.py  KeyFrameAnalyzer.py  MetadataAnalyzer.py  RecordedScanTask.py  TSInfoAnalyzer.py  ThumbnailGenerator.py  __init__.py
server/app/migrations/models/: 0_20210730004656_init.sql  0_20210731012247_init.sql  0_20230512060000_init.py  10_20260530010000_update.py  11_20260604000000_update.py  1_20210810032104_update.sql  1_20230621210000_update.py  2_20210822031531_update.sql  2_20250130170000_update.py  3_20210829063149_update.sql  3_20250214100000_update.py  4_20210903095040_update.sql  4_20250428010000_update.py  5_20210917083320_update.sql  5_20250429010000_update.py  6_20220129130828_update.sql  6_20251023041749_add_clip_videos.py  6_20260108120000_update.py  7_20220426131443_update.sql  7_20251025090000_update.py  7_20260214060000_update.py  8_20220427154401_update.sql  8_20251025093000_add_clip_video_alternate_title.py  8_20260521010000_update.py  9_20220810033000_update.sql  9_20260528010000_update.py
server/app/models/: AccountLink.py  BlueskyAccount.py  Channel.py  Channels.py  ClipVideo.py  LiveStream.py  Program.py  Programs.py  RecordedProgram.py  RecordedVideo.py  Series.py  SeriesBroadcastPeriod.py  TwitterAccount.py  User.py  __init__.py
server/app/routers/: BlueskyRouter.py  CapturesRouter.py  Channels.py  ChannelsRouter.py  ClipVideosRouter.py  DataBroadcastingRouter.py  DiscordRouter.py  LiveStreamsRouter.py  MaintenanceRouter.py  NiconicoRouter.py  ProgramsRouter.py  RecordingPresetsRouter.py  ReservationConditionsRouter.py  ReservationsRouter.py  ReserveConditionsRouter.py  ReservesRouter.py  SeriesRouter.py  SettingsRouter.py  Streams.py  TwitterRouter.py  UsersRouter.py  VersionRouter.py  VideoStreamsRouter.py  VideosRouter.py  streams.py
server/app/streams/: LiveEncodingTask.py  LiveHLSSegmenter.py  LivePSIDataArchiver.py  LiveStream.py  StreamEncodingOptions.py  VideoEncodingTask.py  VideoSegmentPlanner.py  VideoStream.py  __init__.py
server/app/tasks/: LiveEncodingTask.py  __init__.py
server/app/utils/: BlueskyAPI.py  DriveIOLimiter.py  EDCB.py  FastAPITaskUtil.py  FileProcessingQueue.py  HLSLiveSegmenter.py  Jikkyo.py  JikkyoClient.py  LiveStream.py  LiveStreamID.py  LiveStreamIDUtil.py  LogRotation.py  Logging.py  MP4KeyFrameParser.py  NamedPipe.py  NamedPipeUtil.py  NotificationService.py  OAuthCallbackResponse.py  ProcessAffinity.py  ProcessLimiter.py  ServerManager.py  TSInformation.py  TSKeyFrameSeeker.py  TSMetadataAnalyzer.py  TwitterGraphQLAPI.py  TwitterScrapeBrowser.py  __init__.py
server/app/utils/edcb/: CtrlCmdUtil.py  EDCBTuner.py  EDCBUtil.py  PipeStreamReader.py  __init__.py
server/app/utils/hls/: LiveLLHLSSegmenter.py  __init__.py  m3u8.py  segment.py
server/app/utils/mp4/: avc.py  bitstream.py  box.py  hevc.py  mp4a.py
server/app/utils/mpeg2ts/: parser.py  pat.py  pes.py  pmt.py  section.py  ts.py
server/config/: __init__.py  celery.py  settings.py  urls.py
server/data/: jikkyo_channels.json
server/live/: apps.py  serializers.py
server/misc/: LiveBitrateCalculator.py  ResetAerichMigration.py  TSReplaceEncodeMatrixTest.py  TwitterAPIQueryGenerator.py  UpdateThirdparty.py  UpdateThirdpartyLibrary.py
server/static/: jikkyo_channels.json  zendriver_setup.js
(+148 files in other folders)
