[tool.poetry]
name = "KonomiTV-Installer"
version = "0.11.0"
description = "KonomiTV Installer"
package-mode = false

[tool.taskipy.tasks]
dev = "python KonomiTV-Installer.py"
build-windows = "pyinstaller --onefile --uac-admin --icon=KonomiTV-Installer.ico KonomiTV-Installer.py"
build-linux = "pyinstaller --onefile --name=KonomiTV-Installer.elf KonomiTV-Installer.py"

[tool.poetry.dependencies]
python = "3.11.*"
aiofiles = "^23.2.1"
distro = "^1.8.0"
elevate = "^0.1.3"
emoji = "^2.8.0"
ifaddr = "^0.2.0"
psutil = "^5.9.5"
py7zr = "^0.20.6"
# For the Windows version only, to prevent virus detection, when the installer is built by CI,
# it is forced to replace the PyInstaller with my own build.
# ref: https://python-poetry.org/docs/dependency-specification/#combining-git--url--path-dependencies-with-source-repositories
pyinstaller = [
    { platform = "win32", url = "https://github.com/tsukumijima/Pyinstaller-Builds/raw/gh-pages/x86_64/pyinstaller-5.13.0-py3-none-any.whl" },
    { platform = "linux", version = "5.13.0", source = "pypi" },
]
requests = "^2.31.0"
rich = "^13.5.3"
"ruamel.yaml" = "^0.17.32"
taskipy = "^1.12.0"
tzdata = "^2023.3"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
